--- a/sentry-sample/src/main/res/layout/activity_main.xml
+++ b/sentry-sample/src/main/res/layout/activity_main.xml
@@ -40,4 +40,9 @@
           android:layout_height="wrap_content"
           android:id="@+id/native_capture"
           android:text="@string/capture_from_native"/>
+
+  <fragment android:name="io.sentry.sample.MyFragment"
+            android:id="@+id/fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 </LinearLayout>
