--- a/sentry-sample/src/main/res/layout/activity_main.xml
+++ b/sentry-sample/src/main/res/layout/activity_main.xml
@@ -6,51 +6,38 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Button
+    <Button android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/crash_from_java"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/crash_from_java" />
+        android:text="@string/crash_from_java"/>
 
-    <Button
+    <Button android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/send_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/send_message" />
+        android:text="@string/send_message"/>
 
-    <Button
+    <Button android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/capture_exception"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/capture_exception" />
+        android:text="@string/capture_exception"/>
 
-    <Button
+    <Button android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/breadcrumb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/breadcrumb" />
+        android:text="@string/breadcrumb"/>
 
-    <Button
+    <Button android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/anr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/anr" />
+        android:text="@string/anr"/>
 
-    <Button
+    <Button android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/native_crash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/crash_from_native" />
+        android:text="@string/crash_from_native"/>
 
-    <Button
+    <Button android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/native_capture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/capture_from_native" />
-
-    <Button
-        android:id="@+id/sessions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="100 sessions" />
+        android:text="@string/capture_from_native"/>
 </LinearLayout>
